# debugging-dataflow

./: .gitignore  README.md
backend/: main.py  pyproject.toml
frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/components/: AnalysisConfig.tsx  AnalysisHistory.tsx  ConnectionForm.tsx  DAGManager.tsx  FileBrowser.tsx  FlowResults.tsx  IntegrationRuleManager.tsx  LogPanel.tsx  NotionDatabase.tsx  ResourceDashboard.tsx  ResourceManager.tsx  VolumetryPanel.tsx
frontend/lib/: api.ts
frontend/pages/: _app.tsx  index.tsx
frontend/styles/: globals.css
