[project]
name = "dataflow-debugger"
version = "0.1.0"
description = "Debug tool to trace records across multi-stage CSV pipelines in Azure Blob Storage"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.100.0",
    "uvicorn[standard]==0.23.1",
    "pandas==2.1.4",
    "azure-storage-blob==12.19.1",
    "pydantic==2.5.2",
    "python-multipart==0.0.6",
    "polars>=1.39.3",
    "notion-client>=2.2.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",   # for FastAPI test client
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
dev-dependencies = [
    "pytest>=8.0",
    "httpx>=0.27",
]
